--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <!--Importacion de Bootstrap -->
-    <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <!--Importacion de Bootstrap <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" /> -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
     <!--Font Awesome -->
     <link href="lib/fontawesome/css/all.css" rel="stylesheet" />
     <title>Pagina Web CAR</title>
@@ -44,6 +49,10 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <!--JS for bootstrap-->
-    <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
