--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,10 @@
       crossorigin="anonymous"
     />
     <!--Font Awesome -->
-    <link href="lib/fontawesome/css/all.css" rel="stylesheet" />
+    <script
+      src="https://kit.fontawesome.com/caa5220238.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Pagina Web CAR</title>
   </head>
   <body>
